Fix Scrollbar Appearance

--- a/SCSS/Modern Dark Theme.scss
+++ b/SCSS/Modern Dark Theme.scss
@@ -990,26 +990,26 @@
 // Popup
 	.popup-menu {
 		// Hover Preview Max Height
-		.max-h-\[40vh\] {
-			max-height: 100vh;
-		}
+			.max-h-\[40vh\] {
+				max-height: 100vh;
+			}
 		// Static Preview Max Width
-		> div {
-			> div.w-96 {
-				width: 36rem;
-
-				#document-hover-preview__popup {
-					#hierarchy-editor {
-						.animate-zoom-into-bullet {
-							.portal-tree-node-box {
-								// Static Preview Alignment
-								margin-left: 11px;
-							}
+			> div {
+				> div.w-96 {
+					width: 36rem;
+				}
+			}
+		// Hover Preview Backlink Alignment
+			#document-hover-preview__popup {
+				#hierarchy-editor {
+					.animate-zoom-into-bullet {
+						.portal-tree-node-box {
+							// Static Preview Alignment
+							margin-left: 11px;
 						}
 					}
 				}
 			}
-		}
 	}
 	.popup-menu.dark-mode {
 		color: var(--darkmode-text);
@@ -1889,6 +1889,7 @@
 // Scrollbar
 	::-webkit-scrollbar {
 		background-color: transparent;
+		height: 10px;
 		width: 8px;
 	}
 	::-webkit-scrollbar-track {
